syntax = "proto3";

package user;

import "user/rpc_data.proto";

option go_package = "github.com/DeniesKresna/jhapi2-user/pb/user";

message CreateUserRequest {
    string first_name = 1;
    string last_name = 2;
    string email = 3;
    string phone = 4;
    string image_url = 5;
    string password = 6;
    uint64 role_id = 7;
}

message CreateUserResponse {
    User user = 1;
}